test/scc_test/exp/semantic-errors/062.t
void test()
{
    int a;
    a &= 2.0;
}